# radicle-explorer

./: .dockerignore  .gitignore  .prettierignore  .tool-versions  CHANGELOG.md  CLAUDE.md  COLOR_MAPPING.md  COLOR_MIGRATION_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.e2e  HOVER_STATES_FIXED.md  ICON_COLORS_FIXED.md  ID_COLORS_FIXED.md  README.md  RELEASE.md  TYPOGRAPHY_MAPPING.md  docker-compose.e2e.yml  eslint.config.js  fix-hovers.sh  flake.nix  global.d.ts  index.html  migrate-colors.sh  migrate-typography.sh  module.d.ts  package-lock.json  package.json  playwright.config.ts  radworks.json  remove-id-style.sh  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: check-build.yml  check-e2e.yml  check-http-client-unit-test.yml  check-radicle-httpd.yml  check-rust.yml  check-unit-test.yml  check-visual.yml  check.yml
config/: custom-environment-variables.json  default.json  radicle.network.json  test.json
crates/radicle-httpd/: Cargo.toml  radicle-httpd.1.adoc
crates/radicle-httpd/debian/: copyright  lintian-overrides
crates/radicle-httpd/src/: api.rs  git.rs  lib.rs  main.rs  raw.rs  test.rs  tracing_extra.rs
crates/radicle-httpd/src/api/: error.rs  query.rs  v1.rs
crates/radicle-httpd/src/api/json/: commit.rs
crates/radicle-httpd/src/api/v1/: delegates.rs  info.rs  node.rs  repos.rs  stats.rs
crates/radicle-httpd/src/api/v1/repos/: job.rs  releases.rs
crates/radicle-search/: Cargo.toml  README.md
crates/radicle-search/src/: config.rs  indexer.rs  lib.rs  main.rs  query.rs
crates/radicle-search/src/index/: repo.rs
crates/radicle-search/src/index/repo/: data.rs
crates/radicle-search/src/indexer/: bootstrap.rs  build.rs  event.rs
crates/radicle-search/src/indexer/bootstrap/: test.rs
crates/radicle-search/src/indexer/bootstrap/test/: orphans.rs  plan.rs
docs/plans/: 2026-06-03-workspace-and-search-feature-flag-design.md  2026-06-03-workspace-and-search-feature-flag.md
http-client/: index.ts  vite.config.ts
http-client/lib/: fetcher.ts  repo.ts  shared.ts
http-client/lib/repo/: commit.ts  issue.ts  patch.ts  release.ts
http-client/tests/: client.test.ts  release.test.ts  repo.test.ts
public/: app.webmanifest  colors.css  index.css  marketing.css  typography.css
public/marketing/: marketing.css
radicle-httpd/: CHANGELOG.md  Cargo.toml  RELEASE.md
radicle-httpd/debian/: build-deb  changelog  control  copyright  rules
radicle-httpd/debian/source/: lintian-overrides
radicle-httpd/src/: api.rs  auth.rs  axum_extra.rs  error.rs  git.rs  lib.rs  main.rs  raw.rs  test.rs  tracing_extra.rs
radicle-httpd/src/api/: error.rs  query.rs
radicle-httpd/src/api/json/: cobs.rs
radicle-httpd/src/api/v1/: delegates.rs  node.rs  repos.rs
radicle-httpd/src/api/v1/repos/: job.rs
scripts/: check  compile-local-httpd  docker-e2e-entrypoint.sh  inject-plausible  install-binaries  serve  test-e2e-docker
src/: App.svelte  app.d.ts  app.html  hooks.client.ts  hooks.ts
src/App/: Footer.svelte  FullscreenModalPortal.svelte  Help.svelte  Hotkeys.svelte  Layout.svelte  LoadingBar.svelte  MobileFooter.svelte  Settings.svelte
src/components/: ActivityDiagram.svelte  Avatar.svelte  Badge.svelte  Button.svelte  Clipboard.svelte  Command.svelte  Comment.svelte  CompactCommitAuthorship.svelte  DiffStatBadge.svelte  DropdownList.svelte  EmptyState.svelte  ErrorMessage.svelte  ExternalLink.svelte  File.svelte  FilePath.svelte  Header.svelte  HoverPopover.svelte  Icon.svelte  IconButton.svelte  Id.svelte  JobCob.svelte  KeyHint.svelte  Layout.svelte  Link.svelte  List.svelte  Loading.svelte  Logo.svelte  Markdown.svelte  Modal.svelte  NodeId.svelte  Observer.svelte  Placeholder.svelte  Popover.svelte  Radio.svelte  Reactions.svelte  RepoAvatar.svelte  RepoCard.svelte  RepoCard.ts  RepoCardSkeleton.svelte  ScopePolicyExplainer.svelte  (+3 more)
src/components/DropdownList/: DropdownListItem.svelte
src/lib/: archive.ts  avatar.ts  commit.ts  config.ts  error.ts  localStore.ts  markdown.ts  media.ts  router.ts  routes.ts  syntax.ts  utils.ts
src/lib/router/: definitions.ts
src/marketing/: AgentCards.svelte  BasicPrinciples.svelte  Button.svelte  Cli.svelte  Desktop.svelte  Docs.svelte  DownloadPanel.svelte  Footer.svelte  Guides.svelte  HowtoItem.svelte  Install.svelte  Landing.svelte  Learn.svelte  MarkdownLayout.svelte  Meta.svelte  MobileNav.svelte  PlatformBadges.svelte  PrincipleFigure.svelte  Sidebar.svelte  guides.ts  router.ts
src/marketing/docs/: download.md  faq.md  glossary.md
src/modals/: DesignSystemModal.svelte  ErrorModal.svelte  HotkeysModal.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
src/routes/(marketing)/: +layout.svelte  +layout.ts
src/routes/explore/: +page.svelte  +page.ts
src/routes/nodes/: +page.ts
src/views/: NotFound.svelte
src/views/error/: View.svelte
src/views/explore/: HeaderSearch.svelte  RepoSearch.svelte  ReposView.svelte  Section.svelte  SeedPicker.svelte  View.svelte  router.ts  sections.ts
src/views/marketing/: AgentCards.svelte  BasicPrinciples.svelte  Button.svelte  Cli.svelte  CopyCommand.svelte  Desktop.svelte  Docs.svelte  DownloadPanel.svelte  Footer.svelte  Guides.svelte  Install.svelte  Landing.svelte  Learn.svelte  MarkdownLayout.svelte  Marketing.svelte  MarketingShell.svelte  Meta.svelte  MobileNav.svelte  PlatformBadges.svelte  PlatformIcon.svelte  Sidebar.svelte  avatar.ts  guides.ts  link.ts  router.ts  types.ts
src/views/nodes/: NodeAddress.svelte  PolicyExplainer.svelte  ReposView.svelte  SeedSelector.svelte  SeedSelector.ts  Seeding.svelte  UserAgent.svelte  (+3 more)
tests/e2e/: clipboard.spec.ts  explore.spec.ts  marketing.spec.ts  node.spec.ts  repo.spec.ts  router.spec.ts  router.ts  search.spec.ts  theme.spec.ts
tests/support/: config.ts  fixtures.ts  globalSetup.ts  repo.ts  router.ts  support.ts
tests/unit/: localStore.test.ts  router.test.ts  routes.test.ts  utils.test.ts
workers/: README.md  og-injector.js
workers/open-graph/: index.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+122 files in other folders)
