[package]
name = "radicle-httpd"
description = "Radicle HTTP daemon"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.20.0"
authors = ["cloudhead <cloudhead@radicle.xyz>", "sebastinez <me@sebastinez.dev>"]
edition = "2021"
default-run = "radicle-httpd"
build = "build.rs"

[features]
default = []
logfmt = [
  "tracing-logfmt",
  "tracing-subscriber/env-filter"
]

[[bin]]
name = "radicle-httpd"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
axum = { version = "0.8.4", default-features = false, features = ["json", "query", "tokio", "http1"] }
axum-listener = { version = "0.2.0" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
flate2 = { version = "1" }
hyper = { version = "1.6.0", default-features = false }
infer = { version = "0.19.0" }
lexopt = { version = "0.3.1" }
lru = { version = "0.16.0" }
mime_guess = { version = "2.0.5" }
nonempty = { version = "0.12.0", features = ["serialize"] }
radicle = { version = "0.18.0" }
radicle-surf = { version = "0.22.0", default-features = false, features = ["serde"] }
radicle-term = { version = "0.14.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = { version = "2" }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", default-features = false, features = ["trace", "cors", "set-header"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
tracing-logfmt = { version = "0.3.5", optional = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "ansi", "fmt"] }

[dev-dependencies]
hyper = { version = "1.6", default-features = false, features = ["client"] }
pretty_assertions = { version = "1.4.1" }
radicle = { version = "0.18.0", features = ["test"] }
radicle-crypto = { version = "0.13.0", features = ["test"] }
tempfile = { version = "3.20.0" }
tower = { version = "0.5.2", features = ["util"] }
