[package]
name = "radicle-search"
description = "Optional search/index daemon for Radicle, alongside radicle-node and radicle-httpd"
homepage.workspace = true
license.workspace = true
version = "0.1.0"
edition = "2024"
default-run = "radicle-search"

[[bin]]
name = "radicle-search"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lexopt.workspace = true
meilisearch-sdk.workspace = true
radicle.workspace = true
radicle-surf.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` so the retry
# backoff tests fast-forward through their sleeps instead of waiting.
tokio = { workspace = true, features = ["test-util"] }
